--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "npm run start:install --workspace=api",
     "dev:api": "npm run dev --workspace=api",
     "dev:frontend": "npm run dev --workspace=frontend",
-    "dev": "concurrently \"npm run dev:api\" \"npm run dev:frontend\"",
+    "dev": "concurrently \"npm run dev:api -- --host\" \"npm run dev:frontend -- --host\"",
     "test": "npm run test --workspaces",
     "test:api": "npm run test --workspace=api",
     "test:frontend": "npm run test --workspace=frontend",
